# seraj_soft_client_new

./: .env  .env.local  next.config.ts  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
.github/workflows/: app_builder.yml  main.yml
.tauri/: myapp.key  myapp.key.pub
lib/: firebaseAdmin.ts
scripts/: update-latest-json.js  update-latest-json.mjs  update-latest-json.ts
seraj-app/: package.json  vite.config.ts
seraj-app/src-tauri/: Cargo.toml  tauri.conf.json
seraj-app/src-tauri/src/: main.rs
src-tauri/: .gitignore  Cargo.toml  latest.json  latest.json.sig  logger.ts  tauri.conf.json
src-tauri/capabilities/: default.json  main.json
src-tauri/src/: lib.rs  main.rs
src/app/: globals.css  layout.tsx  page.tsx  tauri.ts  window.d.ts
src/app/(admin)/: layout.tsx
src/app/(admin)/(others-pages)/HomePage/: page.tsx
src/app/api/check-client-code/: route.ts
src/app/clients/: page.tsx
src/app/component/: DivOrigami.tsx
src/app/home/: layout.tsx  page.tsx
src/app/login/: page.tsx
src/app/updater/: page.tsx
src/components/auth/: SignInForm.tsx  SignUpForm.tsx
src/components/ecommerce/: DemographicCard.tsx  EcommerceMetrics.tsx  MonthlySalesChart.tsx  MonthlyTarget.tsx  RecentOrders.tsx
src/components/form/form-elements/: DefaultInputs.tsx
src/context/: LanguageContext.tsx
src/layout/: AppHeader.tsx  AppSidebar.tsx  SidebarWidget.tsx
~/.tauri/: myapp.key.pub
