

[package]
name = "app"
version = "0.15.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"



[[bin]]
name = "app"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2.0.4", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.2.4", features = [] }
tauri-plugin-log = "2.0.0"        # استخدم الإصدار المستقر
tauri-plugin-updater = "2.6.0"
tauri-plugin-dialog = "2.2.0"
tauri-plugin-process = "2.2.0"
tokio = { version = "1.44.1", features = ["full"] }


